+TesseractOCR image rec and BART AI classification

--- a/index.html
+++ b/index.html
@@ -62,10 +62,19 @@
                     <p id="efficiency" class="glow">0%</p>
                 </div>
 
+                <!-- Update the current app display section -->
                 <div class="stat-box current-app-box">
                     <h3>Current Application</h3>
-                    <p id="currentApp">-</p>
-                    <p id="status">-</p>
+                    <div class="loading-container">
+                        <p id="currentApp">Not tracking</p>
+                        <div class="loading-spinner"></div>
+                        <div class="loading-dots">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                    <p id="status">Status: Inactive</p>
                 </div>
             </div>
 
